--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.u004</groupId>
     <artifactId>uwutils</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.3_1-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Common utilities</description>
